--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
+        with:
+          node-version: 20
 
       - name: ⎔ Setup node
         uses: actions/setup-node@v3
@@ -42,6 +44,8 @@ jobs:
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
+        with:
+          node-version: 20
 
       - name: ⎔ Setup node
         uses: actions/setup-node@v3
@@ -63,6 +67,8 @@ jobs:
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
+        with:
+          node-version: 20
 
       - name: ⎔ Setup node
         uses: actions/setup-node@v3
@@ -88,6 +94,8 @@ jobs:
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
+        with:
+          node-version: 20
 
       - name: 🏄 Copy test env vars
         run: cp .env.example .env
@@ -146,6 +154,8 @@ jobs:
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
+        with:
+          node-version: 20
 
       - name: 👀 Read app name
         uses: SebRollen/toml-action@v1.0.2
